--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Hibernate - JPA
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql: true
+
+#Security
+# App Properties
+taskify.app.jwtSecret= ======================Taskify=pro===========================
+taskify.app.jwtExpirationMs=86400000
+
+spring.main.allow-circular-references=true
